[package]
name = "rendrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "^0.31"
image = "^0.24"
anyhow = "^1.0"
thiserror = "^1.0"
crossbeam = "^0.8"
num_cpus = "^1.13"
clap = { version = "^3.2", features = ["derive"] }

actix-web = "^4.2"
