[package]
name = "rendrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
image = "0.25.0"
anyhow = "1.0.81"
crossbeam = "0.8.4"
num_cpus = "1.16"
rand = "^0.8"

clap = { version = "3.2", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"

actix = "0.13.3"
actix-web = "4.5.1"
actix-files = "0.6.5"
actix-web-actors = "4.3.0"
open = "5.1.2"
notify = "6.1.1"
